refactor: updated index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Hello, this is Bhargavi Sunkireddy</h3>
+    <h3>Bhargavi Sunkireddy</h3>
 </body>
 </html>
