--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>home | bhargavi</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h3>Bhargavi Sunkireddy</h3>
+    <nav class="navigation">
+        <div class="nav-brand">
+            <a href="/">Bhargavi Sunkireddy</a>
+        </div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/index.html">home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link " href="/blogs.html">blogs</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header class="hder">
+        <img class="hder-img" src="header_image.svg" alt="">
+        <h1 class="hder-heading">Bhargavi Sunkireddy <span class="heading-inverted"> the web developer</span></h1>
+    </header>
+
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>technologies</h1>
+            <p>
+                I'm familiar with HTML5, CSS3, Git, Javascript
+            </p>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Projects</h1>
+            <p>
+                I like to showcase my work and thus, you can see my projects hosted
+                online
+              </p>
+              <a class="link link-primary" href="/projects.html">See Projects</a>
+           
+        </div>
+    </section>
+
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Blogs</h1>
+            <p>
+                I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+              </p>
+              <a class="link link-secondary" href="/blogs.html">See Blogs</a>
+           
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-heading">social media presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+              <a class="link" href="https://github.com/bhargaviRdy"> github </a>
+            </li>
+            <li class="list-item-inline">
+              <a class="link" href="https://twitter.com/bondam_23"> twitter </a>
+            </li>
+            <li class="list-item-inline">
+              <a class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
+                linkedin
+              </a>
+            </li>
+          </ul>
+    </footer>
 </body>
+
 </html>
