updated projects and blogs

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projects | bhargavi</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -27,24 +28,162 @@
         </ul>
     </nav>
 
-  
+    <div class="hder">
+        <h1 class="hder-heading">see <span class="heading-inverted"> my code</span></h1>
+    </div>
+
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Stocks - Profit or Loss</h1>
+            <small>September, 2021</small>
+            <p>A website which lets user know the profit or loss percentage made out of purchase of the stock
+            </p>
+            <a target="_blank" class="link link-primary" href="https://stock-profit-loss-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/stock-profit-or-loss">Source Code</a>
+
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>BirthDay Palindrome</h1>
+            <small>September, 2021</small>
+            <p>App which checks whether your birthday is a palindrome birthday or not and show the nearest palindrome
+                date
+            </p>
+            <a target="_blank" class="link link-primary" href="https://palindrome-birthday-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/palindrome-birthday">Source Code</a>
+
+        </div>
+    </section>
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Fun with Triangle</h1>
+            <small>September, 2021</small>
+            <p>Website with has functionalitites to calculate hypotenuse, area and quiz on triangle</p>
+            <a target="_blank" class="link link-primary" href="https://fun-traingle-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary" href="https://github.com/bhargaviRdy/fun-triangle">Source
+                Code</a>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Is your Birthday Lucky ?</h1>
+            <small>September, 2021</small>
+            <p> A website which can help you to check whether your birthday is lucky or not.
+            </p>
+            <a target="_blank" class="link link-primary" href="https://birthday-lucky-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary" href="https://github.com/bhargaviRdy/birthday-lucky">Source
+                Code</a>
+
+        </div>
+    </section>
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Cash Register Manager</h1>
+            <small>September, 2021</small>
+            <p>A cash register manager which helps the user by telling how can he/she return the change to the customer
+                with minimum number of notes.
+            </p>
+            <a target="_blank" class="link link-primary" href="https://cash-register-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary" href="https://github.com/bhargaviRdy/cash-resgister">Source
+                Code</a>
+
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>my Library</h1>
+            <small>August, 2021</small>
+            <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS with
+                love
+            </p>
+            <a target="_blank" class="link link-primary" href="https://jn5sh.csb.app/">Live Project</a>
+            <a target="_blank" class="link link-secondary" href="https://github.com/bhargaviRdy/book-library">Source
+                Code</a>
+
+        </div>
+    </section>
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Emoji Interpreter</h1>
+            <small>August, 2021</small>
+            <p>I struggle with understanding the emojis. Do you too? If yes, then see this library of emojis with
+                meaning
+            </p>
+            <a target="_blank" class="link link-primary" href="https://140f7.csb.app/">Live Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/emoji-interpreter">Source Code</a>
+
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>Banana Translator</h1>
+            <small>August, 2021</small>
+            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
+                translator to convert your text from English to Minion speak or Banana language.
+            </p>
+            <a target="_blank" class="link link-primary" href="https://banana-translator-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/banana-translator">Source Code</a>
+
+        </div>
+    </section>
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Morse Code Translator</h1>
+            <small>August, 2021</small>
+            <p>Convert English into Morse Code (Encrypting language consisting of dots and dashes)
+            </p>
+            <a target="_blank" class="link link-primary" href="https://morse-code-translator-bhargavi.netlify.app/">Live
+                Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/sign-language-tranlator">Source Code</a>
+
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>How Well Do you know Me?</h1>
+            <small>August 2021</small>
+            <p>This project tests you how well do you know about me and displays the score
+            </p>
+            <a target="_blank" class="link link-primary"
+                href="https://replit.com/@BhargaviSunkire/markOneTwo#index.js">Live Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/markOneTwo/tree/master">Source Code</a>
+
+        </div>
+    </section>
 
     <footer class="footer">
         <div class="footer-heading">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-              <a class="link" href="https://github.com/bhargaviRdy"> github </a>
+                <a target="_blank"  class="link" href="https://github.com/bhargaviRdy"> <i class="fa fa-github" style="font-size:30px;"></i> </a>
             </li>
             <li class="list-item-inline">
-              <a class="link" href="https://twitter.com/bondam_23"> twitter </a>
+                <a  target="_blank" class="link" href="https://twitter.com/bondam_23"> <i class="fa fa-twitter" style="font-size:30px;"></i> </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
-
-                    linkedin
-              </a>
+                <a target="_blank"  class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
+                    <i class="fa fa-linkedin" style="font-size:30px;"></i>
+                </a>
             </li>
-          </ul>
+        </ul>
     </footer>
 </body>
 
