--- a/blogs.html
+++ b/blogs.html
@@ -2,93 +2,77 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blogs | bhargavi</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>blogs | bhargavi</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <nav class="navigation">
-        <div class="nav-brand">
-            <a href="/">Bhargavi Sunkireddy</a>
-        </div>
-        <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline">
-                <a class="link" href="/index.html">home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/projects.html">projects</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link link-active" href="/blogs.html">blogs</a>
-            </li>
-        </ul>
-    </nav>
-
-    <div class="hder">
-        <h1 class="hder-heading">read <span class="heading-inverted">my blogs</span></h1>
-
+  <nav class="navigation">
+    <div class="nav-brand">
+      <a href="/">Bhargavi Sunkireddy</a>
     </div>
+    <ul class="list-non-bullet nav-pills">
+      <li class="list-item-inline">
+        <a class="link" href="/index.html">home</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link" href="/projects.html">projects</a>
+      </li>
+      <li class="list-item-inline">
+        <a class="link link-active" href="/blogs.html">blogs</a>
+      </li>
+    </ul>
+  </nav>
 
-    <ul class="list-non-bullet">
-        <li>
-          <article class="showcase-list container container-center">
-            <h1>dummy blog one</h1>
-            <small>November, 2020</small>
-            <p>
-              The most well-known dummy text is the 'Lorem Ipsum', which is said
-              to have originated in the 16th century. Lorem Ipsum is composed in a
-              pseudo-Latin language which more or less corresponds to 'proper'
-              Latin. It contains a series of real Latin words.
-            </p>
-  
-            <a class="link link-primary" href="./dummy-blog.html">Read More</a>
-          </article>
-        </li>
-  
-        <li>
-          <article class="showcase-list container container-center">
-            <h1>second dummy blog</h1>
-            <small>November, 2020</small>
-            <p>
-              Dummy text: Its function as a filler or as a tool for comparing the
-              visual impression of different typefaces Dummy text is text that is
-              used in the publishing industry or by web designers to occupy the
-              space which will later be filled with 'real' content. This is
-              required when, for example, the final text is not yet available.
-              Dummy text is also known as 'fill text'.
-            </p>
-  
-            <a
-              class="link link-primary"
-              href="https://tanaypratap.substack.com/p/15-lpa-web-dev-job-checklist"
-              >Read More</a
-            >
-          </article>
-        </li>
-      </ul>
+  <div class="hder">
+    <h1 class="hder-heading">read <span class="heading-inverted">my blogs</span></h1>
+  </div>
 
+  <article class="showcase-list ">
+    <h1>Higher Order Functions in JS</h1>
+    <small>September, 2021</small>
+    <p>
+      Higher Order Functions are a major part of functional programming in JavaScript. Here in this blog, I tried to
+      explain some of the Higher Order Functions
+    </p>
+    <a class="link link-primary" target="_blank"
+      href="https://hashnode.com/post/higher-order-functions-in-js-cku5qsaw30jkhp9s1h1f0fqnw">Read More</a>
+  </article>
 
+  <article class="showcase-list">
+    <h1>Comparator Interface</h1>
+    <small>September, 2021</small>
+    <p>
+      Comparator Interface is used for many purposes in Java. Here in this blog, I tried to explain it in detailed
+      manner
+    </p>
 
-    <footer class="footer">
-        <div class="footer-heading">social media presence</div>
-        <ul class="social-links list-non-bullet">
-            <li class="list-item-inline">
-                <a class="link" href="https://github.com/bhargaviRdy"> github </a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/bondam_23"> twitter </a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
+    <a class="link link-primary" target="_blank"
+      href="https://hashnode.com/post/comparator-interface-cku5lb3gu0hzprps1eegcba80">Read More</a>
+  </article>
 
-                    linkedin
-                </a>
-            </li>
-        </ul>
-    </footer>
+  <footer class="footer">
+    <div class="footer-heading">social media presence</div>
+    <ul class="social-links list-non-bullet">
+      <li class="list-item-inline">
+        <a target="_blank" class="link" href="https://github.com/bhargaviRdy"> <i class="fa fa-github"
+            style="font-size:30px;"></i> </a>
+      </li>
+      <li class="list-item-inline">
+        <a target="_blank" class="link" href="https://twitter.com/bondam_23"> <i class="fa fa-twitter"
+            style="font-size:30px;"></i> </a>
+      </li>
+      <li class="list-item-inline">
+        <a target="_blank" class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
+          <i class="fa fa-linkedin" style="font-size:30px;"></i>
+        </a>
+      </li>
+    </ul>
+  </footer>
 </body>
 
 </html>
