--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home | bhargavi</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,14 +30,15 @@
 
     <header class="hder">
         <img class="hder-img" src="header_image.svg" alt="">
-        <h1 class="hder-heading">Bhargavi Sunkireddy <span class="heading-inverted"> the web developer</span></h1>
+        <h1 class="hder-heading"> Hello there 👋 </h1>
+        <h1 class="hder-heading"> I'm Bhargavi Sunkireddy <span class="heading-inverted"> the web developer</span></h1>
     </header>
 
     <section class="section off-white">
         <div class="container container-center">
             <h1>technologies</h1>
             <p>
-                I'm familiar with HTML5, CSS3, Git, Javascript
+                I'm familiar with HTML5, CSS3, Git, Javascript, Java, Python
             </p>
         </div>
     </section>
@@ -59,7 +61,7 @@
             <p>
                 I am also working on some technical and non techincal blogs. I like to document my journey of learning.
               </p>
-              <a class="link link-secondary" href="/blogs.html">See Blogs</a>
+              <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
            
         </div>
     </section>
@@ -68,17 +70,17 @@
         <div class="footer-heading">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-              <a class="link" href="https://github.com/bhargaviRdy"> github </a>
+                <a target="_blank"  class="link" href="https://github.com/bhargaviRdy"> <i class="fa fa-github" style="font-size:30px;"></i> </a>
             </li>
             <li class="list-item-inline">
-              <a class="link" href="https://twitter.com/bondam_23"> twitter </a>
+                <a  target="_blank" class="link" href="https://twitter.com/bondam_23"> <i class="fa fa-twitter" style="font-size:30px;"></i> </a>
             </li>
             <li class="list-item-inline">
-              <a class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
-                linkedin
-              </a>
+                <a target="_blank"  class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
+                    <i class="fa fa-linkedin" style="font-size:30px;"></i>
+                </a>
             </li>
-          </ul>
+        </ul>
     </footer>
 </body>
 
