--- a/projects.html
+++ b/projects.html
@@ -169,6 +169,20 @@
         </div>
     </section>
 
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>Game of Thrones quiz</h1>
+            <small>August 2021</small>
+            <p>This is a CLI based project which asks questions related to Game of Thrones web series and displays the score
+            </p>
+            <a target="_blank" class="link link-primary"
+                href="https://replit.com/@BhargaviSunkire/Game-of-Thrones-quiz#index.js">Live Project</a>
+            <a target="_blank" class="link link-secondary"
+                href="https://github.com/bhargaviRdy/Game-of-Thrones-quiz">Source Code</a>
+
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer-heading">social media presence</div>
         <ul class="social-links list-non-bullet">
