--- a/blogs.html
+++ b/blogs.html
@@ -33,11 +33,11 @@
   </div>
 
   <article class="showcase-list ">
-    <h1>Higher Order Functions in JS</h1>
+    <h1>Functions in JS</h1>
     <small>September, 2021</small>
     <p>
-      Higher Order Functions are a major part of functional programming in JavaScript. Here in this blog, I tried to
-      explain some of the Higher Order Functions
+      Functions are a major part of functional programming in JavaScript. Here in this blog, I tried to
+      explain some of the confused topics about Functions
     </p>
     <a class="link link-primary" target="_blank"
       href="https://hashnode.com/post/higher-order-functions-in-js-cku5qsaw30jkhp9s1h1f0fqnw">Read More</a>
