--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>blogs | bhargavi</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -58,21 +58,26 @@
   <footer class="footer">
     <div class="footer-heading">social media presence</div>
     <ul class="social-links list-non-bullet">
-      <li class="list-item-inline">
-        <a target="_blank" class="link" href="https://github.com/bhargaviRdy"> <i class="fa fa-github"
-            style="font-size:30px;"></i> </a>
-      </li>
-      <li class="list-item-inline">
-        <a target="_blank" class="link" href="https://twitter.com/bondam_23"> <i class="fa fa-twitter"
-            style="font-size:30px;"></i> </a>
-      </li>
-      <li class="list-item-inline">
-        <a target="_blank" class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
-          <i class="fa fa-linkedin" style="font-size:30px;"></i>
-        </a>
-      </li>
+        <li class="list-item-inline">
+            <a target="_blank"  class="link" href="https://github.com/bhargaviRdy"> 
+                github
+                <!-- <i class="fa fa-github" style="font-size:30px;"></i> -->
+             </a>
+        </li>
+        <li class="list-item-inline">
+            <a  target="_blank" class="link" href="https://twitter.com/bondam_23"> 
+                twitter
+                <!-- <i class="fa fa-twitter" style="font-size:30px;"></i>  -->
+            </a>
+        </li>
+        <li class="list-item-inline">
+            <a target="_blank"  class="link" href="https://www.linkedin.com/in/bhargavi-sunkireddy-a60b041a1/">
+                linkedIn
+                <!-- <i class="fa fa-linkedin" style="font-size:30px;"></i> -->
+            </a>
+        </li>
     </ul>
-  </footer>
+</footer>
 </body>
 
 </html>
